Fix arrow showing potential position in turn order being hidden behind hovered unit border

--- a/css/main.less
+++ b/css/main.less
@@ -464,7 +464,7 @@ progress::-webkit-progress-value { background: #080; }
   flex-flow: row;
   width: 100%;
   min-height: 20px;
-  z-index: 1;
+  z-index: 152;
 }
 
 .turn-order-unit
@@ -516,7 +516,7 @@ progress::-webkit-progress-value { background: #080; }
   bottom: -26px;
   left: -15px;
   background-image: url("../img/icons/turnOrderArrow.png");
-  z-index: 101;
+  z-index: 50;
 }
 
 .battle-scene-wrapper
